--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "total"
   ],
   "sideEffects": false,
+  "type": "module",
   "source": "src/index.js",
   "main": "dist/index.cjs",
   "module": "dist/index.module.js",
