--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
   "devDependencies": {
     "@babel/core": "7.23.9",
     "@babel/preset-env": "7.23.9",
-    "@babel/register": "7.23.7",
     "@commitlint/cli": "18.6.0",
     "@js-library/commitlint-config": "0.0.4",
+    "@node-loader/babel": "2.0.1",
     "@total-order/iter": "1.0.0",
     "@total-order/primitive": "1.0.1",
     "ava": "6.1.1",
@@ -98,22 +98,16 @@
     "files": [
       "test/src/**/*"
     ],
+    "nodeArguments": [
+      "--experimental-loader=@node-loader/babel"
+    ],
     "require": [
-      "regenerator-runtime/runtime.js",
-      "@babel/register"
+      "regenerator-runtime/runtime.js"
     ],
     "timeout": "1m"
   },
   "babel": {
     "sourceMaps": true,
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": "current node"
-        }
-      ]
-    ],
     "plugins": [
       [
         "transform-remove-console",
